--- a/examples/test/03-timerFunc.html
+++ b/examples/test/03-timerFunc.html
@@ -21,15 +21,16 @@
                 console.log('1:' + this.foo);
                 this.foo = Math.random()
                 console.log('2:' + this.foo);
+                this.$nextTick(() => {
+                    // 这里才是最新的值
+                    // 打印3的时间戳，因为响应式触发通知后notify, nextTick的执行队列中就存在了watcher处理的任务
+                    // 所有的watcher都用这个任务处理
+                    console.log('p1.innerHTML:' + p1.innerHTML)
+                })
                 this.foo = Math.random()
                 console.log('3:' + this.foo);
                 // 异步行为，此时内容没变
                 console.log('p1.innerHTML:' + p1.innerHTML)
-
-                this.$nextTick(() => {
-                    // 这里才是最新的值
-                    console.log('p1.innerHTML:' + p1.innerHTML)
-                })
             }
         });
     </script>
