--- a/examples/test/06-3-compiler-directive.html
+++ b/examples/test/06-3-compiler-directive.html
@@ -10,8 +10,9 @@
     <div id="demo">
         <h1>Vue<span>模板编译</span></h1>
         <!-- 观察v-if、v-for的解析 -->
-        <p v-if="foo">{{foo}}</p>
+        <p v-if="foo" v-if="!foo">{{foo}}</p>
         <b v-for="s in arr" :key="s">{{s}}</b>
+        <b v-for="(s, index) in arr" :key="index">{{s}}</b>
         <comp></comp>
     </div>
     <script>
